<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditText
        android:id="@+id/editTxtLogin"
        android:contentDescription="@string/editTxt_inform_login"
        android:hint="@string/editTxt_inform_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTxtPassword"
        android:contentDescription="@string/editTxt_inform_password"
        android:hint="@string/editTxt_inform_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnCancelLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"
            android:text="@string/btn_cancel"/>

        <Button
            android:id="@+id/btnConfirmLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_weight="2"
            android:text="@string/btn_confirm" />

    </LinearLayout>

</LinearLayout>